[gd_scene load_steps=4 format=3 uid="uid://c6yqxhc8xrkj8"]

[ext_resource type="Script" path="res://scenes/map_exploration/map_test.gd" id="1_map_test"]
[ext_resource type="Script" path="res://scenes/map_exploration/hero_controller.gd" id="2_hero"]
[ext_resource type="Script" path="res://scenes/map_exploration/map_camera.gd" id="3_camera"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hero"]
radius = 8.0

[node name="MapTest" type="Node2D"]
script = ExtResource("1_map_test")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = null

[node name="Hero" type="CharacterBody2D" parent="."]
position = Vector2(160, 160)
script = ExtResource("2_hero")

[node name="SpriteVisual" type="ColorRect" parent="Hero"]
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
color = Color(0.2, 0.8, 0.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hero"]
shape = SubResource("CircleShape2D_hero")

[node name="InteractionRay" type="RayCast2D" parent="Hero"]
enabled = true
target_position = Vector2(32, 0)

[node name="Followers" type="Node2D" parent="."]

[node name="MapCamera" type="Camera2D" parent="."]
position = Vector2(160, 160)
script = ExtResource("3_camera")
